manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homepage
  namespace: personal
spec:
  selector:
    matchLabels:
      app: homepage
  replicas: 2
  template:
    metadata:
      labels:
        app: homepage
    spec:
      containers:
        - name: homepage
          image: local/homepage:latest
          resources:
            limits:
              memory: "64Mi"
              cpu: "50m"
          ports:
            - containerPort: 80
