manifests/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: homepage
  namespace: personal
spec:
  selector:
    app: homepage
  ports:
    - port: 80
      targetPort: 80
